<resources>
    <string name="app_name">MovieDemoApp</string>
    <string name="no_net">No data found, please on wifi/mobile data !</string>
    <string name="no_data">No data found</string>
    <string name="book_now">BOOK NOW</string>
    <string name="overview">Overview</string>
    <string name="release_date">Release Date</string>
    <string name="geners">Geners</string>
    <string name="ratings">Ratings</string>
    <string name="produced_by">Produced by</string>
    <string name="revenue">Revenue</string>
    <string name="releasing_date">Releasing date</string>
    <string name="cast_amp_credits"><![CDATA[Cast & Credits]]></string>
    <string name="similar_movies">Similar Movies</string>
    <string name="reviews">Reviews</string>
    <string name="search_by_movie_name">Search by movie name</string>
    <string name="recently_searched">Recently searched</string>
</resources>
